# pyai

./: .gitignore  Makefile  README.md  compile_flags.txt  pyproject.toml  setup.py  tmux.sh
.github/workflows/: python-publish.yml
cppai/: knn.hpp
cppai/metrics/: accuracy.py  auc.py
cppai/nn/layers/: base.py
examples/: linear.py
examples/test/: numpy-cupy.py
pyai/: __init__.py  knn.py  tensor.py
pyai/activation_function/: __init__.py  base.py
pyai/loss/: __init__.py  base.py  l1.py  l2.py  mae.py  mse.py
pyai/metrics/: __init__.py
pyai/nn/activation_function/: sigmoid.py
pyai/nn/activations/: __init__.py  base.py  tanh.py
pyai/nn/layers/: __init__.py  base.py  linear.py
scripts/: deploy.sh
src/pyai/metrics/: __init__.py  confusion_matrix.py  precision.py
src/tests/metrics/: test_auc.py
test/: linear.py  numpy-cupy.py  tensor.py
tests/: CMakeLists.txt  run_tests.sh  test_knn.py
tests/data/: iris.csv  iris.csv.help
tests/metrics/: test_auc.py  test_confusion_matrix.py  test_precision.py
tests/src/: example_test.cpp  knn_test.cpp  main.cpp
tests/src/metrics/: test_accuracy.py
tests/src/utils/: dataset.hpp
